# midnight-indexer

./: .dockerignore  .envrc  .gitignore  .midnight.txt  .prettierignore  .sql-formatter.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  NODE_VERSION  NODE_VERSIONS  README.md  VERSION_COMPATIBILITY.md  cliff.toml  coverage.sh  deny.toml  docker-compose-test.yaml  docker-compose.midnight-fork.yaml  docker-compose.runtime-upgrade.yaml  docker-compose.yaml  flake.nix  generate_node_data.sh  generate_txs.sh  get_node_metadata.sh  indexer_common.long-type-10432910393969209015.txt  indexer_common.long-type-66434511422104276.txt  indexer_common.long-type-689700725745799600.txt  justfile  license_headers.sh  rustfmt.toml  test-docker-builds.sh
backfill-contract-balances/: Cargo.toml  Dockerfile  README.md
backfill-contract-balances/src/: main.rs
backfill-contract-balances/tests/: postgres.rs  sqlite.rs
backfill-contract-balances/tests/fixtures/: state-45692-contract-3ba7cb40.hex
backfill-contract-balances/tests/util/: mod.rs
indexer-api/: Cargo.toml  Dockerfile  build.rs  config.yaml
indexer-api/examples/: viewing_keys.rs
indexer-api/graphql/: schema-v1.graphql  schema-v3.graphql  schema-v4.graphql
indexer-api/proto/midnight_indexer/v1/: transaction.proto
indexer-api/src/: application.rs  config.rs  domain.rs  infra.rs  lib.rs  main.rs  version_validator.rs
indexer-api/src/domain/: api.rs  block.rs  bridge.rs  contract_action.rs  contract_balance.rs  contract_event.rs  dust.rs  grpc.rs  ledger_event.rs  ledger_state.rs  shielded_nullifier.rs  spo.rs  storage.rs  system_parameters.rs  transaction.rs  unshielded.rs  viewing_key.rs  zswap.rs
indexer-api/src/domain/storage/: block.rs  bridge.rs  contract_action.rs  contract_event.rs  dust.rs  dust_generations.rs  ledger_events.rs  ledger_state.rs  shielded_nullifiers.rs  spo.rs  system_parameters.rs  transaction.rs  unshielded.rs  unshielded_utxo.rs  wallet.rs
indexer-api/src/infra/: api.rs  storage.rs
indexer-api/src/infra/api/: grpc.rs  progress_cache.rs  quota.rs  v1.rs  v2.rs  v3.rs  v4.rs
indexer-api/src/infra/storage/: block.rs  block_hash_dust_sync_tests.rs  bridge.rs  caching.rs  contract_action.rs  contract_event.rs  dataloader.rs  dataloaders.rs  dust.rs  dust_generations.rs  ledger_events.rs  ledger_state.rs  postgres.rs  shielded_nullifiers.rs  spo.rs  sqlite.rs  system_parameters.rs  transaction.rs  unshielded.rs  wallet.rs
indexer-api/test-data/: README.md
indexer-api/test-data/postgres/: mock-data.sql
indexer-common/: Cargo.toml  build.rs  ledger.redb
indexer-common/benches/: ledger_state.rs  ledger_transaction.rs
indexer-common/migrations/postgres/: 000_ledger_db.sql  001_initial.sql  002_add_unshielded_utxos.sql  002_dust_generations_qdo_fields.sql  002_index.sql  002_ledger_state.sql  002_spo_initial.sql  003_add_transaction_variant_index.sql  003_block_tree_end_indexes.sql  003_contract_events.sql  003_drop_stg_committee.sql  003_rename_cardano_address.sql  003_spo.sql  004_block_dust_merkle_roots.sql  004_bridge_events.sql  004_spo_stake.sql  005_bridge_events.sql  005_contract_events.sql  005_spo_stake_history.sql  005_unshielded_utxos_owner_composite_indexes.sql
indexer-common/migrations/sqlite/: 001_initial.sql  002_add_unshielded_utxos.sql  002_dust_generations_qdo_fields.sql  002_ledger_state.sql  003_add_transaction_variant_index.sql  003_rename_cardano_address.sql  003_spo_stake_integer.sql  004_block_tree_end_indexes.sql  004_bridge_events.sql  004_contract_events.sql  004_unshielded_utxos_owner_composite_indexes.sql  005_blocks_height_idx.sql  006_block_dust_merkle_roots.sql  007_bridge_events.sql  007_unshielded_utxos_owner_composite_indexes.sql  008_contract_events.sql  009_unshielded_utxos_owner_composite_indexes.sql
indexer-common/migrations/sqlite-ledger-db/: 000_ledger_db.sql
indexer-common/src/: cipher.rs  config.rs  domain.rs  error.rs  infra.rs  lib.rs  serialize.rs  stream.rs  telemetry.rs  version.rs
indexer-common/src/domain/: address.rs  bridge.rs  bytes.rs  dust.rs  ledger.rs  ledger_state_storage.rs  network_id.rs  protocol_version.rs  pub_sub.rs  unshielded.rs  viewing_key.rs  zswap.rs
indexer-common/src/domain/ledger/: contract_state.rs  ledger_state.rs  secret_key.rs  system_transaction.rs  transaction.rs
indexer-common/src/infra/: ledger_db.rs  migrations.rs  pool.rs  postgres_db.rs  pub_sub.rs  redb_db.rs  sqlx.rs
indexer-common/src/infra/ledger_db/: postgres.rs  v1_1.rs  v7.rs  v7_0_0.rs  v8.rs
indexer-common/src/infra/ledger_state_storage/: in_mem.rs  nats.rs
indexer-common/src/infra/migrations/: postgres.rs  sqlite.rs
indexer-common/src/infra/pool/: postgres.rs  sqlite.rs
indexer-common/src/infra/pub_sub/: in_mem.rs  (+2 more)
indexer-common/tests/: tx_1_2_2.raw  tx_1_2_3.raw
indexer-tests/: Cargo.toml  Dockerfile  build.rs  config.yaml  e2e.graphql  indexer-api-config.yaml  ledger.redb  proto  queries.graphql
indexer-tests/emit-contract/: contract.config.ts  emitcounter.compact
indexer-tests/query-swap/: contract.config.ts  zswap-holder.compact
indexer-tests/src/: chain_indexer_data.rs  e2e.rs  graphql_query.rs  graphql_ws_client.rs  lib.rs  main.rs
indexer-tests/tests/: api_cloud.rs  dust_graphql.rs  e2e_cloud.rs  e2e_setup.rs  graphql_ws_client.rs  local_e2e.rs  native_e2e.rs  storage.rs
scripts/pm-18678-investigation/: Cargo.toml  README.md  analyze-logs.sh  launch-ec2-investigation.sh  quick-check.sh  run-investigation.sh
scripts/pm-18678-investigation/src/: main.rs
spo-api/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  config.yaml
spo-api/graphql/: schema-v1.graphql
spo-api/src/: application.rs  config.rs  domain.rs  infra.rs  lib.rs  main.rs
spo-api/src/infra/: repo.rs
spo-indexer/: Cargo.toml  Dockerfile  config.yaml
spo-indexer/src/: application.rs  config.rs  domain.rs  infra.rs  lib.rs  main.rs  utils.rs
spo-indexer/src/domain/: committee.rs  epoch.rs  pool.rs  rpc.rs  spo.rs  storage.rs
spo-indexer/src/infra/: config.rs  spo_client.rs  storage.rs  subxt_node.rs
(+1170 files in other folders)
