[workspace]
resolver = "2"
members = [
    "indexer-common",
    "chain-indexer",
    "wallet-indexer",
    "indexer-api",
    "indexer-standalone",
    "indexer-tests",
    "spo-indexer",
]

[workspace.package]
version       = "4.3.3"
edition       = "2024"
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/midnightntwrk/midnight-indexer"
repository    = "https://github.com/midnightntwrk/midnight-indexer"
documentation = "https://github.com/midnightntwrk/midnight-indexer"
publish       = false

[workspace.dependencies]
# Ledger v8 from crates.io. base-crypto and serialize are patched to the rc
# tags below and shared with v9 (within-major).
midnight-base-crypto_v1      = { package = "midnight-base-crypto", version = "1" }
midnight-coin-structure_v2   = { package = "midnight-coin-structure", version = "2" }
midnight-ledger_v8           = { package = "midnight-ledger", version = "8" }
midnight-onchain-runtime_v3  = { package = "midnight-onchain-runtime", version = "3" }
midnight-serialize_v1        = { package = "midnight-serialize", version = "1" }
midnight-storage-core_v1     = { package = "midnight-storage-core", version = "1.2" }
midnight-transient-crypto_v2 = { package = "midnight-transient-crypto", version = "2" }
midnight-zswap_v8            = { package = "midnight-zswap", version = "8" }
# Ledger v9, resolved via the [patch.crates-io] tags below.
midnight-coin-structure_v3   = { package = "midnight-coin-structure", version = "3" }
midnight-ledger_v9           = { package = "midnight-ledger-v9", version = "1.0" }
midnight-onchain-runtime_v4  = { package = "midnight-onchain-runtime", version = "4" }
midnight-transient-crypto_v3 = { package = "midnight-transient-crypto", version = "3" }
midnight-zswap_v9            = { package = "midnight-zswap", version = "9" }
# Other dependencies.
anyhow                      = { version = "1.0" }
assert_matches              = { version = "1.5" }
async-graphql               = { version = "7.2" }
async-graphql-axum          = { version = "7.2" }
async-nats                  = { version = "0.49" }
async-stream                = { version = "0.3" }
axum                        = { version = "0.8" }
bech32                      = { version = "0.12" }
bip32                       = { version = "0.5" }
blake2                      = { version = "0.10" }
blockfrost                  = { version = "1.2" }
byte-unit-serde             = { version = "0.1" }
chacha20poly1305            = { version = "0.10" }
clap                        = { version = "4.6" }
const-hex                   = { version = "1.18" }
criterion                   = { version = "0.8", features = [ "html_reports" ] }
dashmap                     = { version = "6.1" }
derive_more                 = { version = "2.1" }
drop-stream                 = { version = "0.3" }
fake                        = { version = "2.10" }
fastrace                    = { version = "0.7" }
fastrace-axum               = { version = "0.2" }
fastrace-opentelemetry      = { version = "0.18" }
fastrace-tracing            = { version = "0.1" }
figment                     = { version = "0.10" }
flate2                      = { version = "1.1" }
fs_extra                    = { version = "1.3" }
futures                     = { version = "0.3" }
graphql_client              = { version = "0.16" }
http                        = { version = "1.4" }
humantime-serde             = { version = "1.1" }
indoc                       = { version = "2.0" }
itertools                   = { version = "0.15" }
log                         = { version = "0.4" }
logforth                    = { version = "0.30" }
metrics                     = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.18", default-features = false }
moka                        = { version = "0.12", features = [ "future" ] }
nix                         = { version = "0.31" }
opentelemetry               = { version = "0.32" }
opentelemetry-otlp          = { version = "0.32" }
opentelemetry_sdk           = { version = "0.32" }
parity-scale-codec          = { version = "3.7" }
parking_lot                 = { version = "0.12" }
reqwest                     = { version = "0.13", default-features = false }
secrecy                     = { version = "0.10" }
serde                       = { version = "1.0" }
serde_json                  = { version = "1.0" }
serde_with                  = { version = "3.18" }
sha2                        = { version = "0.11" }
sqlx                        = { version = "0.8" }
stream-cancel               = { version = "0.8" }
subxt                       = { version = "0.50" }
tempfile                    = { version = "3.27" }
testcontainers              = { version = "0.27" }
testcontainers-modules      = { version = "0.15" }
thiserror                   = { version = "2.0" }
tokio                       = { version = "1" }
tokio-stream                = { version = "0.1" }
tokio-tungstenite           = { version = "0.29" }
tracing                     = { version = "0.1" }
tracing-subscriber          = { version = "0.3" }
tower                       = { version = "0.5" }
tower-http                  = { version = "0.7" }
trait-variant               = { version = "0.1" }
uuid                        = { version = "1.23", features = [ "serde" ] }
walkdir                     = { version = "2.5" }

# Ledger 9.1.0.0-rc.3, the ledger team's published patch set; the v8/v9
# coexistence shape traces to midnight-ledger#580. The rc crates aren't on
# crates.io yet, hence git tags.
# Entries without package/version replace their registry crate outright
# (base-crypto and serialize, shared with v8 within-major; zkir, v9-only); the
# cross-major v9 crates carry package + version to patch only their major,
# leaving v8's registry versions intact.
[patch.crates-io]
midnight-base-crypto          = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "base-crypto-1.1.0-rc.2" }
midnight-base-crypto-derive   = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "base-crypto-derive-1.1.0-rc.2" }
midnight-serialize            = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "serialize-1.2.0-rc.1" }
midnight-zkir                 = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "zkir-2.2.0-rc.3" }
midnight-transient-crypto-old = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "transient-crypto-2.2.0-rc.1", package = "midnight-transient-crypto", version = "2.2.0" }
midnight-ledger-v9            = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "crate-ledger-9.1.0.0-rc.3" }
midnight-zswap_v9             = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "zswap-9.0.0-rc.3",           package = "midnight-zswap",           version = "9.0.0" }
midnight-coin-structure_v3    = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "coin-structure-3.0.0-rc.1",  package = "midnight-coin-structure",  version = "3.0.0" }
midnight-transient-crypto_v3  = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "transient-crypto-3.0.0-rc.2", package = "midnight-transient-crypto", version = "3.0.0" }
midnight-onchain-runtime_v4   = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "onchain-runtime-4.0.0-rc.2", package = "midnight-onchain-runtime", version = "4.0.0" }
midnight-onchain-state_v4     = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "onchain-state-4.0.0-rc.3",   package = "midnight-onchain-state",   version = "4.0.0" }
midnight-onchain-vm_v4        = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "onchain-vm-4.0.0-rc.2",      package = "midnight-onchain-vm",      version = "4.0.0" }
