[package]
name          = "indexer-api"
version       = "1.0.1"
description   = "Indexer API"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
anyhow             = { workspace = true }
async-graphql      = { workspace = true, features = [ "uuid" ] }
async-graphql-axum = { workspace = true }
async-stream       = { workspace = true }
axum               = { workspace = true, features = [ "http2" ] }
bech32             = { workspace = true }
byte-unit-serde    = { workspace = true }
chacha20poly1305   = { workspace = true, features = [ "std" ] }
clap               = { workspace = true, features = [ "derive" ] }
const-hex          = { workspace = true }
derive_more        = { workspace = true, features = [ "debug", "from" ] }
fastrace           = { workspace = true }
fastrace-axum      = { workspace = true }
futures            = { workspace = true }
indexer-common     = { path = "../indexer-common" }
indoc              = { workspace = true }
log                = { workspace = true, features = [ "kv" ] }
midnight-ledger    = { workspace = true }
secrecy            = { workspace = true }
serde              = { workspace = true, features = [ "derive" ] }
sqlx               = { workspace = true, features = [ "runtime-tokio", "time" ] }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = [ "rt-multi-thread", "time", "signal" ] }
tokio-stream       = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true, features = [ "limit", "trace" ] }
trait-variant      = { workspace = true }
uuid               = { workspace = true, features = [ "v7" ] }

[features]
cloud      = [ "indexer-common/cloud" ]
standalone = [ "indexer-common/standalone" ]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [ 'cfg(coverage)' ] }
