[package]
name          = "indexer-tests"
version       = "0.1.0"
description   = "Tests for the Midnight Indexer"
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
chacha20poly1305  = { workspace = true }
chain-indexer     = { path = "../chain-indexer" }
const-hex         = { workspace = true }
fake              = { workspace = true }
futures           = { workspace = true }
graphql_client    = { workspace = true, features = [ "reqwest" ] }
indexer-api       = { path = "../indexer-api" }
indexer-common    = { path = "../indexer-common" }
midnight-ledger   = { workspace = true, features = [ "fake", "proving", "transaction-construction" ] }
serde             = { workspace = true, features = [ "derive" ] }
serde_json        = { workspace = true }
sqlx              = { workspace = true }
subxt             = { workspace = true }
tokio             = { workspace = true, features = [ "process", "rt-multi-thread" ] }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
assert_matches         = { workspace = true }
bech32                 = { workspace = true }
const-hex              = { workspace = true }
fake                   = { workspace = true }
fs_extra               = { workspace = true }
reqwest                = { workspace = true, features = [ "json" ] }
sqlx                   = { workspace = true, features = [ "postgres" ] }
tempfile               = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true, features = [ "postgres" ] }
wallet-indexer         = { path = "../wallet-indexer" }

[features]
cloud = [
    "chain-indexer/cloud",
    "indexer-api/cloud",
    "indexer-common/cloud",
    "testcontainers-modules/postgres",
    "wallet-indexer/cloud",
]
standalone = [
    "chain-indexer/standalone",
    "indexer-api/standalone",
    "indexer-common/standalone",
    "wallet-indexer/standalone",
]
