[package]
name          = "spo-api"
description   = "SPO API"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
anyhow             = { workspace = true }
async-graphql      = { workspace = true, features = [ "uuid" ] }
async-graphql-axum = { workspace = true }
axum               = { workspace = true, features = [ "http2" ] }
byte-unit-serde    = { workspace = true }
clap               = { workspace = true, features = [ "derive" ] }
derive_more        = { workspace = true, features = [ "debug", "display", "from" ] }
fastrace           = { workspace = true, features = [ "enable" ] }
fastrace-axum      = { workspace = true }
futures            = { workspace = true }
indexer-common     = { path = "../indexer-common" }
indoc              = { workspace = true }
log                = { workspace = true, features = [ "kv" ] }
metrics            = { workspace = true }
serde              = { workspace = true, features = [ "derive" ] }
serde_with         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = [ "macros", "rt-multi-thread", "time", "signal" ] }
tower              = { workspace = true }
tower-http         = { workspace = true, features = [ "cors", "limit" ] }
trait-variant      = { workspace = true }
uuid               = { workspace = true, features = [ "v7" ], optional = true }
sqlx               = { workspace = true, features = [ "runtime-tokio", "postgres" ] }
regex              = { workspace = true }
once_cell          = { workspace = true }

[features]
cloud      = [ "indexer-common/cloud", "uuid" ]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [ 'cfg(coverage_nightly)' ] }

[package.metadata.cargo-shear]
ignored = [ "uuid" ]
